--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,10 @@ services:
     name: sentiment-analysis-api
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install --no-cache-dir -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
-        value: 3.9.16 
+        value: 3.11.7
+      - key: TRANSFORMERS_CACHE
+        value: /tmp/transformers_cache 
