--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,10 @@ services:
     name: sentiment-analysis-api
     env: python
     plan: free
-    buildCommand: pip install --no-cache-dir -r requirements.txt
+    buildCommand: pip install --no-cache-dir --only-binary=all -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11.7
+        value: 3.10.12
       - key: TRANSFORMERS_CACHE
         value: /tmp/transformers_cache 
