--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-textblob==0.17.1
-pydantic==2.5.0
-aiofiles==23.2.1
+fastapi
+uvicorn
+textblob
+pydantic
+aiofiles
